--- a/CSS/login.css
+++ b/CSS/login.css
@@ -35,7 +35,7 @@ header {
 }
 
 .background {
-    background: url('./assets/Airplane.png') no-repeat center center fixed;
+    background: url('https://t0nj3.github.io/project-exam-T0nj3-1/assets/Airplane.png') no-repeat center center fixed;
     background-size: cover;
     min-height: calc(100vh - 150px); 
     display: flex;
