--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9; /* Lys bakgrunn for hele siden */
+    background-color: #f4f4f9; 
 }
 
 header {
@@ -18,7 +18,7 @@ header {
 
 .menu {
     display: flex;
-    gap: 15px; /* Avstand mellom menylenkene */
+    gap: 15px; 
 }
 
 .menu a {
@@ -35,7 +35,7 @@ header {
 }
 
 .background {
-    background: url('/assets//Airplane.png') no-repeat center center fixed;
+    background: url('../assets//Airplane.png') no-repeat center center fixed;
     background-size: cover;
     min-height: calc(100vh - 150px); 
     display: flex;
@@ -57,7 +57,7 @@ h2 {
     margin-bottom: 20px;
     font-size: 24px;
     color: #333;
-    text-align: center; /* Sentrer overskriften */
+    text-align: center; 
 }
 
 label {
@@ -75,7 +75,7 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    width: 100%; /* Få inputene til å bruke 100% av bredden */
+    width: 100%; 
 }
 
 button {
@@ -87,7 +87,7 @@ button {
     background-color: #007bff;
     cursor: pointer;
     transition: background-color 0.3s;
-    width: 100%; /* Få knappen til å bruke 100% av bredden */
+    width: 100%; 
 }
 
 button:hover {
@@ -98,7 +98,7 @@ p {
     margin-top: 10px;
     font-size: 14px;
     color: #555;
-    text-align: center; /* Sentrer teksten */
+    text-align: center; 
 }
 
 a {
