--- a/CSS/registrer.css
+++ b/CSS/registrer.css
@@ -5,7 +5,7 @@ body {
 }
 
 .background {
-    background: url('/assets/Airplane.png') no-repeat center center fixed;
+    background: url('../assets/Airplane.png') no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;
     display: flex;
