--- a/CSS/edit.css
+++ b/CSS/edit.css
@@ -5,6 +5,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   margin: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 h2 {
@@ -37,11 +39,13 @@ button[type="submit"] {
   font-size: 16px;
   font-weight: bold;
   color: #fff;
-  background-color: #28a745;
+  background-color: #ff4081;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  justify-content: center;  
+  width: 100%;
 }
 
 button[type="submit"]:hover {
-  background-color: #218838;
+  background-color: #ff80ab;
 }
