--- a/CSS/header.css
+++ b/CSS/header.css
@@ -14,6 +14,15 @@ html, body {
 
 
 header {
+    position: sticky;
+    z-index: 1000;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 60px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
     display: flex;
     align-items: center;
     padding: 10px 20px;
