--- a/CSS/login.css
+++ b/CSS/login.css
@@ -110,18 +110,8 @@ a:hover {
     text-decoration: underline;
 }
 
-.footer {
-    background-color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-
-.footer-content {
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer-section {
-    flex: 1;
-    margin: 0 10px;
+.error {
+    color: red;
+    font-size: 14px;
+    margin-bottom: 10px; 
 }
