--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,17 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-  }
-  
   * {
     box-sizing: border-box;
     margin: 0;
@@ -23,15 +9,14 @@ body {
     background-color: #f4f4f9;
     display: flex;
     flex-direction: column;
-    padding: 20px;
 }
 
 #showAddPostForm {
     display: block;
-    width: 200px; /* Økt bredde for mer synlighet */
+    width: 200px; 
     margin: 20px auto;
     padding: 12px 24px;
-    font-size: 18px; /* Økt fontstørrelse */
+    font-size: 18px; 
     font-weight: bold;
     color: #fff;
     background-color: #007bff;
@@ -91,8 +76,8 @@ body {
 #addPostForm button[type="submit"] {
     display: block;
     width: 100%;
-    padding: 15px; /* Økt padding for knappen */
-    font-size: 18px; /* Økt fontstørrelse */
+    padding: 15px; 
+    font-size: 18px; 
     font-weight: bold;
     color: #fff;
     background-color: #28a745;
@@ -100,6 +85,8 @@ body {
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s;
+    text-align: center;
+    margin-bottom: 5%;
 }
 
 #addPostForm button[type="submit"]:hover {
@@ -179,7 +166,6 @@ h2 {
     color: #dc3545;
 }
   
-  
   .container {
     background-color: #ffffff;
     padding: 20px;
@@ -201,7 +187,7 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    max-height: 600px;
+    max-height: 500px;
     overflow-y: auto;
     padding-right: 10px; 
   }
