--- a/CSS/edit.css
+++ b/CSS/edit.css
@@ -1,3 +1,17 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-family: "JetBrains Mono", monospace;;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #222;
+  background-color: #fdfdfd;
+}
+
 .container {
   background-color: #fff;
   padding: 30px;
