--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,6 +28,17 @@ html, body {
     overflow: hidden;
 }
 
+.static-carousel-container::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
+}
+
 .static-carousel-container img {
     width: 100%;
     height: 100%;
@@ -36,7 +47,7 @@ html, body {
     position: absolute; 
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 0; 
 }
 
 .static-carousel-container img.active {
