--- a/CSS/header.css
+++ b/CSS/header.css
@@ -5,24 +5,20 @@
 }
 
 html, body {
-    font-family: "JetBrains Mono", monospace;;
+    font-family: "JetBrains Mono", monospace;
     font-size: 16px;
     line-height: 1.5;
     color: #222;
     background-color: #fdfdfd;
+    overflow-x: hidden;
 }
-
 
 header {
     position: sticky;
     z-index: 1000;
-    left: 0;
-    right: 0;
     width: 100%;
     height: 60px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    top: 0;
     display: flex;
     align-items: center;
     padding: 10px 20px;
@@ -54,11 +50,28 @@ h1 {
     color: slategray;
 }
 
-.hamburger,
-.side-menu {
+.hamburger {
     display: none;
 }
 
+.side-menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: -250px; 
+    width: 250px;
+    height: 100%;
+    background-color: white;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    transition: right 0.3s ease;
+    z-index: 1000;
+}
+
+.side-menu.open {
+    right: 0;
+}
 
 @media (max-width: 700px) {
     .menu {
@@ -79,21 +92,6 @@ h1 {
         background-color: black;
     }
 
-    .side-menu {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        right: -250px;
-        width: 250px;
-        height: 100%;
-        background-color: white;
-        box-shadow: -2px 0 5px rgba(0,0,0,0.2);
-        padding: 20px;
-        transition: right 0.3s ease;
-        z-index: 1000;
-    }
-
     .side-menu a {
         padding: 10px 0;
         color: black;
@@ -110,10 +108,6 @@ h1 {
         font-weight: bold;
         cursor: pointer;
         align-self: flex-end;
-    }
-
-    .side-menu.open {
-        right: 0;
     }
 }
 
