--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -103,7 +103,8 @@ html, body {
 }
 
 .popular-posts-section h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     color: #444;
     margin-bottom: 30px;
@@ -117,7 +118,7 @@ html, body {
 }
 
 .popular-posts-section h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
     color: #444;
     margin-bottom: 30px;
@@ -225,11 +226,13 @@ html, body {
     margin: 10% auto 0 auto; 
     text-align: center;
     width: 80%; 
+    
 }
 
 .latest-travels-dynamic h2 {
     font-size: 2rem;
     font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
     margin-bottom: 30px;
     color: #333;
 }
@@ -242,6 +245,7 @@ html, body {
     overflow: hidden;
     color: #ffffff;
     margin-top: 2%;
+    cursor: pointer;
 }
 
 
@@ -474,8 +478,9 @@ html, body {
 
 .text-blog h2 {
     grid-column: 2; 
+    font-family: 'Courier New', Courier, monospace;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: #333;
     margin: 0;
 }
