added hamburgermenu and other small changes

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -109,6 +109,10 @@ h1 {
         cursor: pointer;
         align-self: flex-end;
     }
+
+    .logo a {
+        font-size: 1.5rem;
+    }
 }
 
 .user-menu {
