--- a/CSS/all-posts.css
+++ b/CSS/all-posts.css
@@ -10,8 +10,6 @@ html, body {
     line-height: 1.5;
     color: #222;
     background-color: #fdfdfd;
-    margin: 0;
-    padding: 0;
     width: 100%;
     height: 100%;
 }
@@ -46,6 +44,7 @@ html, body {
     border-radius: 10px;
 }
 
+
 .filter-section {
     display: flex;
     justify-content: center;
@@ -75,25 +74,14 @@ html, body {
 }
 
 
-@media (max-width: 768px) {
-    .filter-section {
-        gap: 10px;
-    }
-
-    .filter-btn {
-        font-size: 0.9rem;
-        padding: 8px 16px;
-    }
-}
-
-.hamburger-menu {
+.filter-hamburger-menu {
     display: none;
     flex-direction: column;
     cursor: pointer;
     gap: 5px;
 }
 
-.hamburger-menu span {
+.filter-hamburger-menu span {
     display: block;
     width: 25px;
     height: 3px;
@@ -110,65 +98,11 @@ html, body {
     padding: 10px;
     border-radius: 10px;
 }
-
-@media (max-width: 768px) {
-    .filter-section {
-        display: none;
-    }
-
-    .hamburger-menu {
-        display: flex;
-    }
-
-    .mobile-filter-menu.active {
-        display: flex;
-    }
-}
-
-.hamburger-menu {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-    gap: 5px;
-}
-
-.hamburger-menu span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #333;
-    transition: all 0.3s;
-}
-
-.mobile-filter-menu {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    background-color: #f9f9f9;
-    padding: 10px;
-    border-radius: 10px;
-}
-
-@media (max-width: 768px) {
-    .filter-section {
-        display: none;
-    }
-
-    .hamburger-menu {
-        display: flex;
-    }
-
-    .mobile-filter-menu.active {
-        display: flex;
-    }
-}
-
 
 
 #blogContainer {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr)); 
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 20px;
     justify-items: center;
     align-items: start;
@@ -176,21 +110,20 @@ html, body {
 }
 
 .blog-post {
-    width: 100%; 
-    max-width: 800px; 
+    width: 100%;
+    max-width: 800px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     transition: transform 0.3s ease;
-    
 }
 
 .blog-post img {
     width: 100%;
-    height: 250px; 
-    object-fit: cover; 
+    height: 250px;
+    object-fit: cover;
     border-radius: 5px;
     transition: transform 0.3s ease;
 }
@@ -204,74 +137,21 @@ html, body {
     font-weight: 200;
     font-size: 1.25vw;
     text-decoration: none;
-    color: #000000;
+    color: #000;
     font-family: 'Courier New', Courier, monospace;
-    
-}
-
-@media (min-width: 992px) {
-    #blogContainer {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-}
-
-@media (min-width: 600px) and (max-width: 991px) {
-    #blogContainer {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-}
-
-@media (max-width: 599px) {
-    #blogContainer {
-        grid-template-columns: 1fr;
-    }
-    .blog-post h2 {
-        margin-top: 10px;
-        font-size: 2.25vw;
-    }
-}
-
-@media (min-width: 1500px) {
-    #blogContainer {
-        grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
-    }
-    .blog-post img {
-        width: 100%;
-        height: 450px; 
-        object-fit: cover; 
-        border-radius: 5px;
-        transition: transform 0.3s ease;
-    }
 }
 
 
-.button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 50px;
-}
-
-
-.button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-}
-
-#postCount, #loadMoreButton {
+.button-container, #postCount, #loadMoreButton {
     display: flex;
     justify-content: center;
-    text-align: center;
+    align-items: center;
     margin: 40px auto;
 }
 
 #postCount {
     font-size: 1rem;
     color: #555;
-    margin-top: 30px;
     margin-bottom: 10px;
 }
 
@@ -291,17 +171,6 @@ html, body {
     background-color: #ff80ab;
 }
 
-
-@media (max-width: 768px) {
-    #postCount {
-        font-size: 0.9rem;
-    }
-
-    #loadMoreButton {
-        padding: 10px 20px;
-        font-size: 0.9rem;
-    }
-}
 
 .filter-container {
     position: relative;
@@ -345,46 +214,128 @@ html, body {
     font-family: "JetBrains Mono", monospace;
 }
 
-.filter-options p:hover {
-    color: #ff4081;
-}
-
-.filter-options p.active {
+.filter-options p:hover, .filter-options p.active {
     color: #ff4081;
 }
 
 
-.button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
+@media screen and (max-width: 768px) {
+    .hero-overlay {
+        font-size: 2rem;
+        top: 50%;
+    }
+
+    .hero-section .hero-image {
+        height: 100%;
+    }
+
+   
+    .filter-section {
+        display: none;
+    }
+
+    .filter-btn {
+        font-size: 0.9rem;
+        padding: 8px 16px;
+    }
+
+    #postCount {
+        font-size: 0.9rem;
+    }
+
+    #loadMoreButton {
+        padding: 10px 20px;
+        font-size: 0.9rem;
+    }
+
+   
+    .filter-hamburger-menu {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin: 10px 20px;
+        cursor: pointer;
+    }
+
+    .filter-hamburger-menu span {
+        background-color: #333;
+    }
+
+    
+    .mobile-filter-menu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        background-color: #f9f9f9;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin: 10px 20px;
+    }
+
+    .mobile-filter-menu.active {
+        display: flex;
+    }
+
+    .mobile-filter-menu .filter-btn {
+        width: 100%;
+        background-color: #ccc;
+        padding: 10px;
+        font-size: 1rem;
+        text-align: center;
+        border-radius: 8px;
+        transition: background-color 0.3s;
+    }
+
+    .mobile-filter-menu .filter-btn:hover {
+        background-color: #aaa;
+    }
+
+    .mobile-filter-menu .filter-btn.active {
+        background-color: #ff4081;
+        color: #ffffff;
+    }
 }
 
-#postCount {
-    font-size: 1rem;
-    color: #555;
-    margin-bottom: 10px;
+@media (max-width: 600px) {
+    .filter-hamburger-menu {
+        display: flex;
+    }
+
+    .mobile-filter-menu.active {
+        display: flex;
+    }
 }
 
-#loadMoreButton {
-    padding: 12px 24px;
-    font-size: 1rem;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #ff4081;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease;
+@media (min-width: 992px) {
+    #blogContainer {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
 }
 
-#loadMoreButton:hover {
-    background-color: #ff80ab;
-    transform: translateY(-3px);
+@media (min-width: 600px) and (max-width: 991px) {
+    #blogContainer {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
 }
 
-#loadMoreButton:active {
-    background-color: #222;
-    transform: translateY(0);
+@media (max-width: 599px) {
+    #blogContainer {
+        grid-template-columns: 1fr;
+    }
+
+    .blog-post h2 {
+        font-size: 2.25vw;
+    }
+}
+
+@media (min-width: 1500px) {
+    #blogContainer {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+
+    .blog-post img {
+        height: 450px;
+    }
 }
