--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -654,17 +654,20 @@ html, body {
     margin-bottom: 20px;
 }
 
-.guide-content button {
-    padding: 15px 70px;
-    font-size: 1.2rem;
-    color: #fff;
+
+.button-link {
+    display: inline-block;
+    padding: 10px 20px;
     background-color: #ff4081;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    align-self:center;
-    
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px; 
+    font-size: 16px;
+}
+
+.button-link:hover {
+    background-color: #0056b3; 
 }
 
 .guide-content button:hover {
