--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -666,7 +666,7 @@ html, body {
 }
 
 .button-link:hover {
-    background-color: #0056b3; 
+    background-color: #ff80ab;
 }
 
 .guide-content button:hover {
